@@ -232,6 +232,21 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|SolrException
+operator|.
+name|ErrorCode
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|response
 operator|.
 name|TextResponseWriter
@@ -1844,7 +1859,7 @@ argument_list|)
 return|;
 block|}
 block|}
-comment|/**    * Analyzer set by schema for text types to use when indexing fields    * of this type, subclasses can set analyzer themselves or override    * getAnalyzer()    * @see #getAnalyzer    */
+comment|/**    * Analyzer set by schema for text types to use when indexing fields    * of this type, subclasses can set analyzer themselves or override    * getAnalyzer()    * @see #getAnalyzer    * @see #setAnalyzer    */
 DECL|field|analyzer
 specifier|protected
 name|Analyzer
@@ -1856,7 +1871,7 @@ argument_list|(
 literal|256
 argument_list|)
 decl_stmt|;
-comment|/**    * Analyzer set by schema for text types to use when searching fields    * of this type, subclasses can set analyzer themselves or override    * getAnalyzer()    * @see #getQueryAnalyzer    */
+comment|/**    * Analyzer set by schema for text types to use when searching fields    * of this type, subclasses can set analyzer themselves or override    * getAnalyzer()    * @see #getQueryAnalyzer    * @see #setQueryAnalyzer    */
 DECL|field|queryAnalyzer
 specifier|protected
 name|Analyzer
@@ -1886,7 +1901,29 @@ return|return
 name|queryAnalyzer
 return|;
 block|}
-comment|/**    * Sets the Analyzer to be used when indexing fields of this type.    * @see #getAnalyzer    */
+DECL|field|analyzerError
+specifier|private
+specifier|final
+name|String
+name|analyzerError
+init|=
+literal|"FieldType: "
+operator|+
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" ("
+operator|+
+name|typeName
+operator|+
+literal|") does not support specifying an analyzer"
+decl_stmt|;
+comment|/**    * Sets the Analyzer to be used when indexing fields of this type.    *    *<p>    * The default implementation throws a SolrException.      * Subclasses that override this method need to ensure the behavior     * of the analyzer is consistent with the implementation of toInternal.    *</p>    *     * @see #toInternal    * @see #setQueryAnalyzer    * @see #getAnalyzer    */
 DECL|method|setAnalyzer
 specifier|public
 name|void
@@ -1896,35 +1933,49 @@ name|Analyzer
 name|analyzer
 parameter_list|)
 block|{
-name|this
-operator|.
-name|analyzer
-operator|=
-name|analyzer
-expr_stmt|;
-name|log
-operator|.
-name|trace
+name|SolrException
+name|e
+init|=
+operator|new
+name|SolrException
 argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
 literal|"FieldType: "
 operator|+
-name|typeName
-operator|+
-literal|".setAnalyzer("
-operator|+
-name|analyzer
+name|this
 operator|.
 name|getClass
 argument_list|()
 operator|.
-name|getName
+name|getSimpleName
 argument_list|()
 operator|+
-literal|")"
+literal|" ("
+operator|+
+name|typeName
+operator|+
+literal|") does not support specifying an analyzer"
+argument_list|)
+decl_stmt|;
+name|SolrException
+operator|.
+name|logOnce
+argument_list|(
+name|log
+argument_list|,
+literal|null
+argument_list|,
+name|e
 argument_list|)
 expr_stmt|;
+throw|throw
+name|e
+throw|;
 block|}
-comment|/**    * Sets the Analyzer to be used when querying fields of this type.    * @see #getQueryAnalyzer    */
+comment|/**    * Sets the Analyzer to be used when querying fields of this type.    *    *<p>    * The default implementation throws a SolrException.      * Subclasses that override this method need to ensure the behavior     * of the analyzer is consistent with the implementation of toInternal.    *</p>    *     * @see #toInternal    * @see #setAnalyzer    * @see #getQueryAnalyzer    */
 DECL|method|setQueryAnalyzer
 specifier|public
 name|void
@@ -1934,33 +1985,47 @@ name|Analyzer
 name|analyzer
 parameter_list|)
 block|{
-name|this
-operator|.
-name|queryAnalyzer
-operator|=
-name|analyzer
-expr_stmt|;
-name|log
-operator|.
-name|trace
+name|SolrException
+name|e
+init|=
+operator|new
+name|SolrException
 argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
 literal|"FieldType: "
 operator|+
-name|typeName
-operator|+
-literal|".setQueryAnalyzer("
-operator|+
-name|analyzer
+name|this
 operator|.
 name|getClass
 argument_list|()
 operator|.
-name|getName
+name|getSimpleName
 argument_list|()
 operator|+
-literal|")"
+literal|" ("
+operator|+
+name|typeName
+operator|+
+literal|") does not support specifying an analyzer"
+argument_list|)
+decl_stmt|;
+name|SolrException
+operator|.
+name|logOnce
+argument_list|(
+name|log
+argument_list|,
+literal|null
+argument_list|,
+name|e
 argument_list|)
 expr_stmt|;
+throw|throw
+name|e
+throw|;
 block|}
 comment|/**    * calls back to TextResponseWriter to write the field value    */
 DECL|method|write
