@@ -512,6 +512,42 @@ name|term
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|setAnalyzer
+specifier|public
+name|void
+name|setAnalyzer
+parameter_list|(
+name|Analyzer
+name|analyzer
+parameter_list|)
+block|{
+name|this
+operator|.
+name|analyzer
+operator|=
+name|analyzer
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|setQueryAnalyzer
+specifier|public
+name|void
+name|setQueryAnalyzer
+parameter_list|(
+name|Analyzer
+name|analyzer
+parameter_list|)
+block|{
+name|this
+operator|.
+name|queryAnalyzer
+operator|=
+name|analyzer
+expr_stmt|;
+block|}
 DECL|method|parseFieldQuery
 specifier|static
 name|Query
